--- a/.github/workflows/scrape-action.yml
+++ b/.github/workflows/scrape-action.yml
@@ -27,7 +27,18 @@ jobs:
         with:
           path: '**/node_modules'
           key: ${{ runner.os }}-modules-${{ hashFiles('**/package-lock.lock') }}
+      
+      - run: node -v
 
       - run: npm install
 
       - run: node index.mjs
+
+  deploy:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Deploy site
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./public
