--- a/.github/workflows/scrape-action.yml
+++ b/.github/workflows/scrape-action.yml
@@ -13,7 +13,7 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  build:
+  build-deploy:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
@@ -34,9 +34,6 @@ jobs:
 
       - run: node index.mjs
 
-  deploy:
-    runs-on: ubuntu-latest
-    steps:
       - name: Deploy site
         uses: peaceiris/actions-gh-pages@v3
         with:
