--- a/.github/workflows/scrape-action.yml
+++ b/.github/workflows/scrape-action.yml
@@ -2,7 +2,7 @@ name: Scrape numbers
 
 on:
   # push:
-  #   branches: [ main ]
+    branches: [ puppeteer-testing ]
   # 3am is 5am in SA time
   schedule:
     - cron:  '0 3 * * *'
