dont think it will work

--- a/.github/workflows/scrape-action.yml
+++ b/.github/workflows/scrape-action.yml
@@ -32,6 +32,8 @@ jobs:
 
       - run: npm install
 
+      - run: sudo echo 'nameserver 8.8.8.8' > /etc/resolv.conf
+
       - run: networkctl status eth0
 
       - run: node index.mjs
