--- a/.github/workflows/website-action.yml
+++ b/.github/workflows/website-action.yml
@@ -25,11 +25,12 @@ jobs:
 
       # probably could make this better
       - name: Add the base path
-        uses: jacobtomlinson/gha-find-replace@master
+        uses: jacobtomlinson/gha-find-replace@v2
         with:
           find: '<base href="/">'
           replace: '<base href="https://runningdeveloper.github.io/sa-vaccine-numbers/">'
           include: "index.html"
+          regex: false
 
       - name: Deploy site
         uses: peaceiris/actions-gh-pages@v3
